Updated HTML files to use absolute paths for CSS and JS

--- a/expert-integration.html
+++ b/expert-integration.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2.4 Expert en IntÃ©gration** - FEA</title>
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/chatbot.css">
+    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="/CSS/chatbot.css">
 </head>
 <body>
     <header class="header">
@@ -143,7 +143,7 @@
     <div class="chatbot-header">
         <div class="header-content">
             <div class="chatbot-avatar">
-                <img src="https://img.icons8.com/color/96/000000/chatbot.png" alt="Chatbot">
+                <img src="/https://img.icons8.com/color/96/000000/chatbot.png" alt="Chatbot">
             </div>
             <div class="chatbot-info">
                 <h3>Assistant FEA</h3>
@@ -172,9 +172,9 @@
     </div>
 </div>
 
-<script src="JS/chatbot.js"></script>
-    <script src="JS/email-service.js"></script>
-    <script src="JS/script.js"></script>
+<script src="/JS/chatbot.js"></script>
+    <script src="/JS/email-service.js"></script>
+    <script src="/JS/script.js"></script>
 </body>
 </html>
 
