--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FEA - Fiches de Poste</title>
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
 </head>
 <body>
     <header class="header">
@@ -116,7 +116,7 @@
     </footer>
 
     <!-- Script de recherche -->
-    <script src="JS/search.js"></script>
-    <script src="JS/script.js"></script>
+    <script src="/JS/search.js"></script>
+    <script src="/JS/script.js"></script>
 </body>
 </html>
