--- a/ingenieur-mlops.html
+++ b/ingenieur-mlops.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>6.3 IngÃ©nieur MLOps (OpÃ©ration pour apprentissage automatique) - FEA</title>
-    <link rel="stylesheet" href="/CSS/style.css">
-    <link rel="stylesheet" href="/CSS/chatbot.css">
+    <link rel="stylesheet" href="/CSS/style.css?v=1765190611133">
+    <link rel="stylesheet" href="/CSS/chatbot.css?v=1765190611133">
 </head>
 <body>
     <header class="header">
@@ -186,9 +186,9 @@
         </button>
     </div>
 </div>
-<script src="/JS/chatbot.js"></script>
-    <script src="/JS/email-service.js"></script>
-    <script src="/JS/script.js"></script>
+<script src="/JS/chatbot.js?v=1765190611133"></script>
+    <script src="/JS/email-service.js?v=1765190611133"></script>
+    <script src="/JS/script.js?v=1765190611133"></script>
 </body>
 </html>
 
