--- a/responsable-continuite.html
+++ b/responsable-continuite.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>5.3 Responsable de la continuitÃ© d'activitÃ©s - FEA</title>
-    <link rel="stylesheet" href="/CSS/style.css">
-    <link rel="stylesheet" href="/CSS/chatbot.css">
+    <link rel="stylesheet" href="/CSS/style.css?v=1765190611133">
+    <link rel="stylesheet" href="/CSS/chatbot.css?v=1765190611133">
 </head>
 <body>
     <header class="header">
@@ -184,9 +184,9 @@
         </button>
     </div>
 </div>
-<script src="/JS/chatbot.js"></script>
-    <script src="/JS/email-service.js"></script>
-    <script src="/JS/script.js"></script>
+<script src="/JS/chatbot.js?v=1765190611133"></script>
+    <script src="/JS/email-service.js?v=1765190611133"></script>
+    <script src="/JS/script.js?v=1765190611133"></script>
 </body>
 </html>
 
