--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
                     <div class="index-section">
                         <h3>1. Architecture d'entreprise</h3>
                         <ul class="index-list">
-                            <li><a href="//architecte-entreprise.html">1.1 Architecte d'Entreprise**</a></li>
-                            <li><a href="//urbaniste-si.html">1.2 Urbaniste SI (Architecte fonctionnel)**</a></li>
-                            <li><a href="//responsable-gouvernance.html">1.3 Responsable Gouvernance</a></li>
+                            <li><a href="/architecte-entreprise.html">1.1 Architecte d'Entreprise**</a></li>
+                            <li><a href="/urbaniste-si.html">1.2 Urbaniste SI (Architecte fonctionnel)**</a></li>
+                            <li><a href="/responsable-gouvernance.html">1.3 Responsable Gouvernance</a></li>
                         <h3>2. Architecture SI</h3>
-                            <li><a href="//architecte-solution.html">2.1 Architecte Solution**</a></li>
-                            <li><a href="//architecte-applicatif.html">2.2 Architecte Applicatif**</a></li>
-                            <li><a href="//lead-tech.html">2.3 Lead Tech**</a></li>
-                            <li><a href="//expert-integration.html">2.4 Expert en Intégration**</a></li>
+                            <li><a href="/architecte-solution.html">2.1 Architecte Solution**</a></li>
+                            <li><a href="/architecte-applicatif.html">2.2 Architecte Applicatif**</a></li>
+                            <li><a href="/lead-tech.html">2.3 Lead Tech**</a></li>
+                            <li><a href="/expert-integration.html">2.4 Expert en Intégration**</a></li>
                             <li><a href="/architecte-applicatif.html">2.2 Architecte Applicatif**</a></li>
                             <li><a href="/lead-tech.html">2.3 Lead Tech**</a></li>
                             <li><a href="/expert-integration.html">2.4 Expert en Intégration**</a></li>
