--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <base href="/">
     <title>FEA - Fiches de Poste</title>
-    <link rel="stylesheet" href="/CSS/style.css?v=1765190611133">
+    <link rel="stylesheet" href="CSS/style.css?v=1765190611133">
 </head>
 <body>
     <header class="header">
@@ -42,67 +42,67 @@
                     <div class="index-section">
                         <h3>1. Architecture d'entreprise</h3>
                         <ul class="index-list">
-                            <li><a href="/architecte-entreprise.html">1.1 Architecte d'Entreprise**</a></li>
-                            <li><a href="/urbaniste-si.html">1.2 Urbaniste SI (Architecte fonctionnel)**</a></li>
-                            <li><a href="/responsable-gouvernance.html">1.3 Responsable Gouvernance</a></li>
+                            <li><a href="architecte-entreprise.html">1.1 Architecte d'Entreprise**</a></li>
+                            <li><a href="urbaniste-si.html">1.2 Urbaniste SI (Architecte fonctionnel)**</a></li>
+                            <li><a href="responsable-gouvernance.html">1.3 Responsable Gouvernance</a></li>
                         </ul>
                     </div>
                     <div class="index-section">
                         <h3>2. Architecture SI</h3>
                         <ul class="index-list">
-                            <li><a href="/architecte-solution.html">2.1 Architecte Solution**</a></li>
-                            <li><a href="/architecte-applicatif.html">2.2 Architecte Applicatif**</a></li>
-                            <li><a href="/lead-tech.html">2.3 Lead Tech**</a></li>
-                            <li><a href="/expert-integration.html">2.4 Expert en Intégration**</a></li>
+                            <li><a href="architecte-solution.html">2.1 Architecte Solution**</a></li>
+                            <li><a href="architecte-applicatif.html">2.2 Architecte Applicatif**</a></li>
+                            <li><a href="lead-tech.html">2.3 Lead Tech**</a></li>
+                            <li><a href="expert-integration.html">2.4 Expert en Intégration**</a></li>
                         </ul>
                     </div>
                     <div class="index-section">
                         <h3>3. Cloud & Infrastructure</h3>
                         <ul class="index-list">
-                            <li><a href="/architecte-infrastructure.html">3.1 Architecte Infrastructure**</a></li>
-                            <li><a href="/architecte-cloud.html">3.2 Architecte Cloud</a></li>
-                            <li><a href="/ingenieur-devops.html">3.3 Ingénieur DevOps**</a></li>
-                            <li><a href="/ingenieur-securite.html">3.4 Ingénieur en sécurité**</a></li>
+                            <li><a href="architecte-infrastructure.html">3.1 Architecte Infrastructure**</a></li>
+                            <li><a href="architecte-cloud.html">3.2 Architecte Cloud</a></li>
+                            <li><a href="ingenieur-devops.html">3.3 Ingénieur DevOps**</a></li>
+                            <li><a href="ingenieur-securite.html">3.4 Ingénieur en sécurité**</a></li>
                         </ul>
                     </div>
                     <div class="index-section">
                         <h3>4. DevOps & SRE</h3>
                         <ul class="index-list">
-                            <li><a href="/architecte-devops.html">4.1 Architecte DevOps**</a></li>
-                            <li><a href="/sre.html">4.2 SRE (Ingénieur de fiabilité de sites)**</a></li>
-                            <li><a href="/ingenieur-automatisation-tests.html">4.3 Ingénieur d'automatisation de tests**</a></li>
-                            <li><a href="/architecte-observabilite.html">4.4 Architecte Observabilité</a></li>
+                            <li><a href="architecte-devops.html">4.1 Architecte DevOps**</a></li>
+                            <li><a href="sre.html">4.2 SRE (Ingénieur de fiabilité de sites)**</a></li>
+                            <li><a href="ingenieur-automatisation-tests.html">4.3 Ingénieur d'automatisation de tests**</a></li>
+                            <li><a href="architecte-observabilite.html">4.4 Architecte Observabilité</a></li>
                         </ul>
                     </div>
                     <div class="index-section">
                         <h3>5. Sécurité & Gouvernance</h3>
                         <ul class="index-list">
-                            <li><a href="/architecte-securite.html">5.1 Architecte Sécurité</a></li>
-                            <li><a href="/specialiste-iam.html">5.2 Spécialiste IAM (Gestion des Identités et des accès)</a></li>
-                            <li><a href="/responsable-continuite.html">5.3 Responsable de la continuité d'activités</a></li>
+                            <li><a href="architecte-securite.html">5.1 Architecte Sécurité</a></li>
+                            <li><a href="specialiste-iam.html">5.2 Spécialiste IAM (Gestion des Identités et des accès)</a></li>
+                            <li><a href="responsable-continuite.html">5.3 Responsable de la continuité d'activités</a></li>
                         </ul>
                     </div>
                     <div class="index-section">
                         <h3>6. Data & IA</h3>
                         <ul class="index-list">
-                            <li><a href="/architecte-data.html">6.1 Architecte Data**</a></li>
-                            <li><a href="/ingenieur-data.html">6.2 Ingénieur Data</a></li>
-                            <li><a href="/ingenieur-mlops.html">6.3 Ingénieur MLOps (Opération pour apprentissage automatique)</a></li>
-                            <li><a href="/architecte-solution-ia.html">6.4 Architecte Solution IA</a></li>
+                            <li><a href="architecte-data.html">6.1 Architecte Data**</a></li>
+                            <li><a href="ingenieur-data.html">6.2 Ingénieur Data</a></li>
+                            <li><a href="ingenieur-mlops.html">6.3 Ingénieur MLOps (Opération pour apprentissage automatique)</a></li>
+                            <li><a href="architecte-solution-ia.html">6.4 Architecte Solution IA</a></li>
                         </ul>
                     </div>
                     <div class="index-section">
                         <h3>7. Réseau et périmètres (Network & Edge)</h3>
                         <ul class="index-list">
-                            <li><a href="/architecte-reseau.html">7.1 Architecte réseau**</a></li>
-                            <li><a href="/ingenieur-reseau-cloud.html">7.2 Ingénieur réseau cloud</a></li>
+                            <li><a href="architecte-reseau.html">7.1 Architecte réseau**</a></li>
+                            <li><a href="ingenieur-reseau-cloud.html">7.2 Ingénieur réseau cloud</a></li>
                         </ul>
                     </div>
                     <div class="index-section">
                         <h3>8. Poste de travail (Digital Workplace)</h3>
                         <ul class="index-list">
-                            <li><a href="/architecte-poste-travail.html">8.1 Architecte/Ingénieur poste de travail**</a></li>
-                            <li><a href="/ingenieur-iam-workplace.html">8.2 Ingénieur IAM (Identité & accès) Poste de travail</a></li>
+                            <li><a href="architecte-poste-travail.html">8.1 Architecte/Ingénieur poste de travail**</a></li>
+                            <li><a href="ingenieur-iam-workplace.html">8.2 Ingénieur IAM (Identité & accès) Poste de travail</a></li>
                         </ul>
                     </div>
                 </div>
@@ -117,7 +117,7 @@
     </footer>
 
     <!-- Script de recherche -->
-    <script src="/JS/search.js?v=1765190611133"></script>
-    <script src="/JS/script.js?v=1765190611133"></script>
+    <script src="JS/search.js?v=1765190611133"></script>
+    <script src="JS/script.js?v=1765190611133"></script>
 </body>
 </html>
