--- a/architecte-applicatif.html
+++ b/architecte-applicatif.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2.2 Architecte Applicatif** - FEA</title>
     <link rel="stylesheet" href="/CSS/style.css?v=1765190611133">
