--- a/specialiste-iam.html
+++ b/specialiste-iam.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>5.2 SpÃ©cialiste IAM (Gestion des IdentitÃ©s et des accÃ¨s) - FEA</title>
     <link rel="stylesheet" href="/CSS/style.css?v=1765190611133">
