--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="Content-Language" content="fr">
+    <meta http-equiv="Content-Language" content="fr">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FEA - Fiches de Poste</title>
     <link rel="stylesheet" href="CSS/style.css?v=1765190611133">
@@ -12,7 +14,7 @@
         <div class="container">
             <div class="logo">
                 <h1>Wekey FEA</h1>
-                <p>Filière d'Excelence Architecture</p>
+                <p>Filié¨re d'Excelence Architecture</p>
             </div>
             <div class="search-container">
                 <input type="text" id="searchInput" placeholder="Rechercher un poste...">
@@ -26,7 +28,7 @@
             <nav class="navigation">
                 <ul>
                     <li><a href="#index">Index</a></li>
-                    <li><a href="#evaluation">Évaluation Technique</a></li>
+                    <li><a href="#evaluation">évaluation Technique</a></li>
                     <li><a href="#fiches">Fiches de Poste</a></li>
                 </ul>
             </nav>
@@ -34,7 +36,7 @@
     </header>
 
     <main class="main-content">
-        <!-- Section Index/Table des Matières -->
+        <!-- Section Index/Table des Matié¨res -->
         <section id="index" class="section">
             <div class="container">
                 <h2>FICHES DE POSTE</h2>
@@ -69,17 +71,17 @@
                         <h3>4. DevOps & SRE</h3>
                         <ul class="index-list">
                             <li><a href="architecte-devops.html">4.1 Architecte DevOps**</a></li>
-                            <li><a href="sre.html">4.2 SRE (Ingénieur de fiabilité de sites)**</a></li>
+                            <li><a href="sre.html">4.2 SRE (Ingénieur de fiabilitàde sites)**</a></li>
                             <li><a href="ingenieur-automatisation-tests.html">4.3 Ingénieur d'automatisation de tests**</a></li>
                             <li><a href="architecte-observabilite.html">4.4 Architecte Observabilité</a></li>
                         </ul>
                     </div>
                     <div class="index-section">
-                        <h3>5. Sécurité & Gouvernance</h3>
+                        <h3>5. Sécurità& Gouvernance</h3>
                         <ul class="index-list">
                             <li><a href="architecte-securite.html">5.1 Architecte Sécurité</a></li>
-                            <li><a href="specialiste-iam.html">5.2 Spécialiste IAM (Gestion des Identités et des accès)</a></li>
-                            <li><a href="responsable-continuite.html">5.3 Responsable de la continuité d'activités</a></li>
+                            <li><a href="specialiste-iam.html">5.2 Spécialiste IAM (Gestion des Identités et des accé¨s)</a></li>
+                            <li><a href="responsable-continuite.html">5.3 Responsable de la continuitàd'activités</a></li>
                         </ul>
                     </div>
                     <div class="index-section">
@@ -92,7 +94,7 @@
                         </ul>
                     </div>
                     <div class="index-section">
-                        <h3>7. Réseau et périmètres (Network & Edge)</h3>
+                        <h3>7. Réseau et périmé¨tres (Network & Edge)</h3>
                         <ul class="index-list">
                             <li><a href="architecte-reseau.html">7.1 Architecte réseau**</a></li>
                             <li><a href="ingenieur-reseau-cloud.html">7.2 Ingénieur réseau cloud</a></li>
@@ -102,7 +104,7 @@
                         <h3>8. Poste de travail (Digital Workplace)</h3>
                         <ul class="index-list">
                             <li><a href="architecte-poste-travail.html">8.1 Architecte/Ingénieur poste de travail**</a></li>
-                            <li><a href="ingenieur-iam-workplace.html">8.2 Ingénieur IAM (Identité & accès) Poste de travail</a></li>
+                            <li><a href="ingenieur-iam-workplace.html">8.2 Ingénieur IAM (Identità& accé¨s) Poste de travail</a></li>
                         </ul>
                     </div>
                 </div>
@@ -112,7 +114,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 FEA - Filière Architecture. Tous droits réservés.</p>
+            <p>&copy; 2025 FEA - Filié¨re Architecture. Tous droits réservés.</p>
         </div>
     </footer>
 
@@ -121,3 +123,5 @@
     <script src="JS/script.js?v=1765190611133"></script>
 </body>
 </html>
+
+
