--- a/architecte-data.html
+++ b/architecte-data.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>6.1 Architecte Data** - FEA</title>
     <link rel="stylesheet" href="/CSS/style.css?v=1765190611133">
-    <link rel="stylesheet" href="/CSS/chatbot.css?v=1765190611133">
+
 </head>
 <body>
     <header class="header">
@@ -159,20 +159,23 @@
     <div class="chatbot-header">
         <div class="header-content">
             <div class="chatbot-avatar">
-                <img src="/https://img.icons8.com/color/96/000000/chatbot.png" alt="Chatbot">
+                <img src="https://img.icons8.com/color/96/000000/chatbot.png" alt="Chatbot">
             </div>
             <div class="chatbot-info">
                 <h3>Assistant FEA</h3>
                 <p>En ligne</p>
             </div>
         </div>
-        <button id="minimize-chat" class="icon-btn">âˆ’</button>
-        <button id="close-chat" class="icon-btn">Ã—</button>
+        <button id="minimize-chat" class="icon-btn">
+            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <line x1="5" y1="12" x2="19" y2="12"></line>
+            </svg>
+        </button>
     </div>
     
     <div class="chatbot-messages" id="chat-messages">
         <div class="welcome-message">
-            <p>ðŸ‘‹ Bonjour ! Je suis votre assistant virtuel. Comment puis-je vous aider aujourd'hui ?</p>
+            <p>👋Bonjour ! Je suis votre assistant virtuel. Comment puis-je vous aider aujourd'hui ?</p>
             <p>Vous pouvez me poser des questions sur les fiches de poste, les compÃ©tences requises ou tout autre sujet liÃ© Ã  la filiÃ¨re architecture.</p>
         </div>
     </div>
@@ -193,4 +196,6 @@
     <script src="/JS/script.js?v=1765190611133"></script>
 </body>
 </html>
+
+
 
