--- a/architecte-data.html
+++ b/architecte-data.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>6.1 Architecte Data** - FEA</title>
-    <link rel="stylesheet" href="/CSS/style.css?v=1765190611133">
+    <link rel="stylesheet" href="/CSS/style.css">
 
 </head>
 <body>
@@ -191,11 +191,13 @@
     </div>
 </div>
 
-<script src="/JS/chatbot.js?v=1765190611133"></script>
-    <script src="/JS/email-service.js?v=1765190611133"></script>
-    <script src="/JS/script.js?v=1765190611133"></script>
+<script src="/JS/chatbot.js"></script>
+    <script src="/JS/email-service.js"></script>
+    <script src="/JS/script.js"></script>
 </body>
 </html>
+
+
 
 
 
