--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Language" content="fr">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FEA - Fiches de Poste</title>
-    <link rel="stylesheet" href="CSS/style.css?v=1765190611133">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
     <header class="header">
@@ -119,9 +119,11 @@
     </footer>
 
     <!-- Script de recherche -->
-    <script src="JS/search.js?v=1765190611133"></script>
-    <script src="JS/script.js?v=1765190611133"></script>
+    <script src="JS/search.js"></script>
+    <script src="JS/script.js"></script>
 </body>
 </html>
+
+
 
 
