--- a/responsable-continuite.html
+++ b/responsable-continuite.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Language" content="fr">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>5.3 Responsable de la continuitàd'activités - FEA</title>
-    <link rel="stylesheet" href="/CSS/style.css?v=1765190611133">
+    <link rel="stylesheet" href="/CSS/style.css">
 
 </head>
 <body>
@@ -189,11 +189,13 @@
         </button>
     </div>
 </div>
-<script src="/JS/chatbot.js?v=1765190611133"></script>
-    <script src="/JS/email-service.js?v=1765190611133"></script>
-    <script src="/JS/script.js?v=1765190611133"></script>
+<script src="/JS/chatbot.js"></script>
+    <script src="/JS/email-service.js"></script>
+    <script src="/JS/script.js"></script>
 </body>
 </html>
+
+
 
 
 
