--- a/test-chatbot.html
+++ b/test-chatbot.html
@@ -122,9 +122,9 @@
     <!-- Le chatbot sera injectàici par le JavaScript -->
     
     <!-- Inclure les scripts nécessaires -->
-    <script src="/JS/groq-config.js?v=1765190611133"></script>
-    <script src="/JS/groq-service.js?v=1765190611133"></script>
-    <script src="/JS/chatbot.js?v=1765190611133"></script>
+    <script src="/JS/groq-config.js"></script>
+    <script src="/JS/groq-service.js"></script>
+    <script src="/JS/chatbot.js"></script>
     
     <script>
         // Initialiser le chatbot quand la page est chargée
@@ -169,6 +169,7 @@
     </script>
 </body>
 </html>
+
 
 
 
