--- a/architecte-cloud.html
+++ b/architecte-cloud.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3.2 Architecte Cloud - FEA</title>
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
     <header class="header">
@@ -190,11 +190,13 @@
     </div>
 </div>
 
-<script src="/JS/chatbot.js"></script>
-    <script src="/JS/email-service.js"></script>
-    <script src="/JS/script.js"></script>
+<script src="JS/chatbot.js"></script>
+    <script src="JS/email-service.js"></script>
+    <script src="JS/script.js"></script>
 </body>
 </html>
+
+
 
 
 
