--- a/ingenieur-mlops.html
+++ b/ingenieur-mlops.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Language" content="fr">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>6.3 Ingénieur MLOps (Opération pour apprentissage automatique) - FEA</title>
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
 
 </head>
 <body>
@@ -191,11 +191,13 @@
         </button>
     </div>
 </div>
-<script src="/JS/chatbot.js"></script>
-    <script src="/JS/email-service.js"></script>
-    <script src="/JS/script.js"></script>
+<script src="JS/chatbot.js"></script>
+    <script src="JS/email-service.js"></script>
+    <script src="JS/script.js"></script>
 </body>
 </html>
+
+
 
 
 
