--- a/responsable-gouvernance.html
+++ b/responsable-gouvernance.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Language" content="fr">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>1.3 Responsable Gouvernance - FEA</title>
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
 
 </head>
 <body>
@@ -181,11 +181,13 @@
     </div>
 </div>
 
-<script src="/JS/chatbot.js"></script>
-    <script src="/JS/email-service.js"></script>
-    <script src="/JS/script.js"></script>
+<script src="JS/chatbot.js"></script>
+    <script src="JS/email-service.js"></script>
+    <script src="JS/script.js"></script>
 </body>
 </html>
+
+
 
 
 
